url formatting in bib, intro to chapter 3

--- a/mapping.tex
+++ b/mapping.tex
@@ -54,7 +54,7 @@ In the mathematics context, the use of the term mapping varies subtly according 
 
 Strictly speaking in mathematics, a function can only represent a \emph{one-to-one mapping}. This means that every element in the input (domain) set is associated by the function with one and only one element in the output (range) set. A corollary statement about a one-to-one mapping is that every element in the output set might be associated to one element, many elements, no elements, or all elements in the input set.
 
-The following are examples of equations that represent functions or one-to-one mappings:
+The following are examples of equations that represent functions or equivalently one-to-one mappings:
 
 \begin{equation} \label{eq1}
 y = f(x) = x + 1
@@ -73,9 +73,9 @@ To calculate the association that is implied by these two mathematical transform
 
 In the computer science context, a mapping is an abstract data type or concrete data structure, commonly referred to as an \emph{associative array} or \emph{dictionary} \cite{assocarray2008}.  
 
-Abstractly and simply, the one and only way to store data of any kind (the value "0", the value "1", some text, an image, a sound, a recorded signal) in a computer of any kind, such that one can retrieve the data later, is to put the data in some "bucket" that has some "label". The words "bucket" and "label" are not well-defined or widely used. The point is that if the data has no label that is associated with it, then practically, it cannot be retrieved. 
+Abstractly and simply, the one and only way to store data of any kind (the value "0", the value "1", some text, an image, a sound, a recorded signal) in a computer of any kind, such that one can retrieve the data later, is to put the data in some "bucket" that has some "label". The words "bucket" and "label", as used here, are not well-defined or widely used in computer science. But they help to unobtrusively make the point that if the data has no label that is associated with it or if the label has no unique location associated with it, then practically, it cannot be retrieved. 
 
-As an example from the music information retrieval context, if one wants to be able to store a large amount of sheet music such that it can be found later, one needs a some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, the name of the composer, etc.
+As an example from the music information retrieval context, if one wants to be able to store a large amount of sheet music such that it can be found later, one needs some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, the name of the composer, etc.
 
 Just like a reference library can use many different labeling systems to catalog the sheet music stored within its walls so that it can be retrieved with minimum headaches, a computer system can internally utilize many different abstract data types or concrete data structures. In both cases, the best choice is dependent on the material or data being cataloged or indexed. A mapping as a data structure in computer science parlance then, can be understood as a particular type of system for labeling data.
 
@@ -253,15 +253,18 @@ These special OSC messages as defined by their message headers and syntax compri
 
 A \emph{sensor network} is a term used in electrical engineering literature to refer to a system that employs a (typically) large number of distributed sensors that are connected to each other through autonomous, intermediary nodes capable of processing and communicating the data obtained from the particular sensors it is attached to and relaying that information to other nodes on the network. If the nodes communicate with each other through some form of wireless radio then the network can be referred to as a \emph{wireless sensor network}. The key functional difference being that in the wireless scenario, the nodes are not tethered to a particular physical location and are free to move provided they remain within radio range. Libmapper can, in principle, with few to no modifications operate in either scenario and the phrase \emph{sensor network} will be used to encapsulate both.
 
-The concept of a sensor network is useful because it strikes a good balance of specificity and abstraction when describing a particular network topology and implementation. Sensor networks, particularly wireless sensor networks, are an active field of research in a diverse array of research fields including defense, environmental monitoring, energy/heat systems, and structural engineering. In these and related situations, the function of the sensor network is to sense, measure, and gather information from the environment and/or actors in the environment and use the capability of distributed processing nodes to make decisions about where the information should be routed \cite{survey2008}. The majority of research applications do not focus on the use of these datastreams to output sound, visuals, or control actuators in realtime, however there the definition of a sensor network does not preclude the nodes in the network from being connected to actuators as well as sensors.
+The concept of a sensor network is useful because it strikes a good balance of specificity and abstraction when describing a particular network topology and implementation. Sensor networks, particularly wireless sensor networks, are an active field of research in a diverse array of research fields including defense, environmental monitoring, energy/heat systems, and structural engineering. In these and related situations, the function of the sensor network is to sense, measure, and gather information from the environment and/or actors in the environment and use the capability of distributed processing nodes to make decisions about where the information should be routed \cite{survey2008}. The majority of research applications do not focus on the use of these datastreams to output sound, visuals, or control actuators in realtime, however the definition of a sensor network does not preclude the nodes in the network from being connected to actuators as well as sensors.
 
 \section{Digital Musical Instruments as Localized Sensor Networks}
 
 A DMI can be understood as a particular form of sensor network. Particularly, if all of the sensors, processing nodes (perhaps each running an instance of Libmapper), and sound generation mechanism are all housed in a single physical object. Typically, no academic would refer to such a DMI as a sensor network, however it would technically fall under the working definition used in this paper.
 
-Framing a DMI as a sensor network affords one the ability to imagine what form a more sensor network-like DMI might take. Additionally, because the task of mapping is fundementally a task of network topology configuration it is better term to use when focusing on the mapping layer of a musical system. A single DMI might consist of many spatially-distributed control devices that each output signals connected to the inputs of a sound generation device. Or an orchestra of DMIs might be understood to be one musical sensor network that together produce one collection of sound. The argument is that understanding what is being built in terms of a sensor network, as opposed to individual DMIs that may or may not be played together, better reflects the pecularities of what a DMI is and why the task of building a DMI is different from building an acoustic musical instrument. Additionally, perhaps such a reframing might better work \emph{with} the pecularities of a DMI and lessen the extent to which design teams work against the inate characteristics of a computers attempting to make DMIs in the image of acoustic musical instruments. After all, as previously discussed, this fundemental difference between a DMI and acoustic musical instrument is what introduces the task of mapping as unique to DMIs in the first place. For convenience, the term musical sensor network (MSN) will be used in the remainder of this paper to reference this particular framing of the DMI concept in contexts that might be helped by this alternative concept. However, the two terms can usually be used interchangably. 
+Framing a DMI as a sensor network affords one the ability to imagine what form a more \emph{sensor network-like} DMI might take. Additionally, because the task of mapping is fundamentally a task of network topology configuration, it is a better term to use when focusing on the mapping layer of a musical system. A single DMI might consist of many spatially-distributed control devices that each output signals connected to the inputs of a sound generation device. Or an orchestra of DMIs might be understood to be one musical sensor network that together produce one collection of sound. The argument is that understanding what is being built in terms of a sensor network, as opposed to individual DMIs that may or may not be played together, better reflects the pecularities of what a DMI fundamentally is and why the task of building a DMI is so different from building an acoustic musical instrument.
+
+Additionally, perhaps such a reframing might better work \emph{with} the pecularities of a DMI and lessen the extent to which design teams work against the inate characteristics of computers attempting to make DMIs in the image of acoustic musical instruments. After all, as previously discussed, this fundemental difference between a DMI and acoustic musical instrument is what introduces the task of mapping as unique to DMIs in the first place. For convenience, the term \emph{musical sensor network} (MSN) will be used in the remainder of this paper to reference this particular framing of the DMI concept in contexts that might be helped by this alternative concept. However, the two terms can usually be used interchangably without being inaccurate. 
 
 \section{Usability and Graphical User Interfaces}
 
-Imagine a MSN comprised of more than ten Libmapper-enabled devices, some of them are control devices and some are sound generation devices. Each device might output, or receive as inputs, around ten signals. So to create a mapping layer over this distributed network of devices, one might send hundreds of Mapper Protocol messages to link, unlink, connect, disconnect, etc. various pairs of devices and signals as one attempts to determine through trial and error the specific set of connections and functional transformations that best fit the particular sensors, devices, context, and design intentions of the people constructing the system. It may be that it is unclear what control device ought to be linked to what sound generation device, much less what signals within the control device to connect to what particular signals within the sound generation device. When experimenting with a mapping layer for a specific MSN it is necessary to view the current network mapping, modify the current mapping, test the new mapping, evaluate its effectiveness and then repeat the process until the mapping is satisfactory. Any tools and interfaces that speed up this iterative process and reduce the amount of Libmapper-specific/Mapper Protocol knowledge improves the usability of Libmapper and allows for a wider diversity of skill sets to participate in the mapping task for a musical system. 
+Imagine a MSN comprised of more than ten Libmapper-enabled devices, some of them are control devices and some are sound generation devices. Each device might output, or receive as inputs, around ten signals. So to create a mapping layer over this distributed network of devices, one might send hundreds of Mapper Protocol messages to link, unlink, connect, disconnect, etc. various pairs of devices and signals as one attempts to determine through trial and error the specific set of connections and functional transformations that best fit the particular sensors, devices, context, and design intentions of the people constructing the system. 
 
+It may be that it is unclear what control device ought to be linked to what sound generation device, much less what signals within the control device to connect to what particular signals within the sound generation device. When experimenting with a mapping layer for a specific MSN it is necessary to view the current network mapping, modify the current mapping, test the new mapping, evaluate its effectiveness and then repeat the process until the mapping is satisfactory. Any tools and interfaces that speed up this iterative process and reduce the amount of Libmapper-specific/Mapper Protocol knowledge required to efficiently explore the possibilities of a particular MSN improves the usability of Libmapper and allows for a wider diversity of skill sets and roles in a broader performance project involving instrumentalists, composers, directors, and engineers to participate in the mapping task that is so crucial to the character of a musical system. 
