--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-11 15:59:53 -0400 
+%% Created for Vijay at 2011-07-12 14:15:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,41 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@misc{unix2008,
+	Author = {Eric Steven Raymond and Rob W. Landley},
+	Date-Added = {2011-07-12 14:12:51 -0400},
+	Date-Modified = {2011-07-12 14:14:51 -0400},
+	Howpublished = {\url{http://www.catb.org/~esr/writings/taouu/html/index.html}},
+	Month = {January},
+	Title = {The Art of Unix Usability},
+	Year = {2008}}
+
+@misc{os2000,
+	Author = {R. Bjork},
+	Date-Added = {2011-07-12 14:01:40 -0400},
+	Date-Modified = {2011-07-12 14:05:23 -0400},
+	Howpublished = {\url{http://www.math-cs.gordon.edu/courses/cs322/lectures/history.html}},
+	Title = {A Brief History of Computer Operating Systems},
+	Year = {2000}}
+
+@article{seven1956,
+	Author = {George A. Miller},
+	Date-Added = {2011-07-12 13:40:15 -0400},
+	Date-Modified = {2011-07-12 13:41:47 -0400},
+	Journal = {The Psychological Review},
+	Pages = {81-97},
+	Title = {The Magical Number Seven, Plus or Minus Two: Some Limits on Our Capacity for Processing Information},
+	Volume = {63},
+	Year = {1956}}
+
+@misc{oshistory2011,
+	Author = {Philip H. Nielson},
+	Date-Added = {2011-07-12 12:44:07 -0400},
+	Date-Modified = {2011-07-12 12:59:03 -0400},
+	Howpublished = {\url{http://www.philscis.com/CIS1520/LectureonHistoryofOperatingSystems.pdf}},
+	Title = {History of Operating Systems},
+	Year = {2011}}
 
 @article{survey2008,
 	Author = {Jennifer Yick and Biswanath Mukherjee and Dipak Ghosal},
