--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{setspace}		% 1.5 spacing
 \usepackage{longtable}          % Tables spanning pages
 \usepackage{verbatim}
+\usepackage{url}
 
 % Custom packages
 \usepackage[first]{datestamp}	% Datestamp on first page of each chapter
