--- a/mapping.tex
+++ b/mapping.tex
@@ -83,9 +83,13 @@ In particular, a mapping is a labeling system that is composed of a \emph{collec
 
 This reframing of the term in the computer science context, as opposed to the mathematical context, clarifies one implication of the concept of mapping. One can specify multiple, unique mappings that each operate on the same collection of labels and the same collection of pieces of data. Similarly, one can specify multiple, unique functions that each operate on the same input set and the same output set. 
 
-Note well, that although there is a distinct difference between a \emph{collection} and a \emph{set} in mathematical formalism, the colloquial understanding of the two terms, where they are interchangable, is sufficient for the purpose of this research and they will be used interchangably. 
+Note well, that although there is a subtle difference between a \emph{collection} and a \emph{set} in mathematical formalism, the colloquial understanding of the two terms, where they are interchangable, is sufficient for the purpose of this research and they will be used interchangably. 
 
 So in a computer system, one can create multiple mappings that each associate the same collection of labels with the same collection of data differently. This characteristic of mappings is one of the primary reasons why mappings are a useful frame for understanding the potential of digital musical instruments. 
+
+\subsection{Cardinality in Mathematics}
+
+\subsection{Cardinality in Computer Science}
 
 \section{Importance of Mapping in Digital Musical Instruments}
 
