--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -50,6 +50,19 @@ This increased flexibility has meant that computers are becoming entangled in ne
 The relevant point regarding the use of HCI techniques like task analysis to analyse artistic systems is that HCI, and thus user interface and data visualization design, has borne the fingerprints of a discipline that was ultimately derived from the standpoint of increasing productivity and improving job performance. 
 
 \section{Graphical Perception and Information Seeking}
+
+\begin{quote}
+Graphics is the visual means of resolving logical problems. \cite{bertin1981}
+\end{quote}
+
+This idea from Bertin, who conducted one of the first attempts to provide a theoretical foundation to information visualization, summarizes the hope for an alternative interface for configuring a Libmapper network. 
+
+The task of mapping is a logical problem, as well as an artistic one. It is a logical problem in the sense that one cannot make connections haphazardly between any pair of input and output signals and expect the network mapping that is produced to be interesting as a DMI. One must still infer through some form of reasoning the suitability of a particular connection in the context of the particular devices on the network, the nature of the signals that the devices produce, and the broader artistic intentions of the design team. 
+
+It could be that one output signal generates floating-point decimal values and one input signal accepts only integer values. Or if a specific output signal tends to generate an essentially static signal regardless of the gestures performed with the MSN, it would make for a very dull and non-dynamic performance to connect this signal to the pitch input signal of a audio synthesizer. Of course, as previously stated one does not typically make use of metrics like productivity or performance in an artistic context, so the logical problem is different. But even an artistic project has goals and intentions, though they are considerably harder to define in words. Visualizing the Libmapper network effectively within a user interface will likely help a team of people (as long as there is agreement about the artistic and other intentions of the scenario that the MSN is to be used in), resolve these logical problems involving network topology and signal transformation more effectively. 
+
+According to Bertin, graphics have at least two distinct uses. The first is as a means of communicating some information. The second is as a medium for graphical processing, defined as using the manipulation and perception of graphical objects to understand the information \cite{card1997}. Any graphical interface that is monitoring a Libmapper network will likely incorporate both uses of graphics. The current state of the network, including the namespaces and properties of all registered devices and signals and all signal connections and transformations, needs to be able to be gleaned from the interface. Also, the interface must allow the user to manipulate the graphics in such a way as to facilitate the connection and disconnection of signals with or without functional transformations applied to the signals.
+
 \begin{comment}
 The Structure of the Information Visualization Design Space, Section 2 
 controlled vs. automatic processing
@@ -57,7 +70,7 @@ connection
 
 Visual Information Seeking: Tight Coupling of Dynamic Query Filters with Starfield Displays
 \end{comment}
-\subsection{Recognition vs. Recall}
+\section{Recognition vs. Recall}
 \section{Modal Interfaces}
 
 \section{Filtering}
