--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-12 14:15:51 -0400 
+%% Created for Vijay at 2011-07-14 16:50:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,25 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@inproceedings{card1997,
+	Address = {Los Alamitos, CA, USA},
+	Author = {Stuart K. Card and Jock Mackinlay},
+	Booktitle = {IEEE Symposium on Information Visualization},
+	Date-Added = {2011-07-14 16:45:14 -0400},
+	Date-Modified = {2011-07-14 16:49:58 -0400},
+	Pages = {92},
+	Publisher = {IEEE Computer Society},
+	Title = {The Structure of the Information Visualization Design Space},
+	Year = {1997}}
+
+@book{bertin1981,
+	Author = {Jacques Bertin},
+	Date-Added = {2011-07-14 15:50:23 -0400},
+	Date-Modified = {2011-07-14 15:52:34 -0400},
+	Publisher = {Walter de Gruyter},
+	Title = {Graphics and Graphic Information-Processing},
+	Year = {1981}}
 
 @misc{unix2008,
 	Author = {Eric Steven Raymond and Rob W. Landley},
