--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-18 17:37:33 -0400 
+%% Created for Vijay at 2011-07-19 15:57:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,26 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@inproceedings{carddata1987,
+	Address = {New York, NY, USA},
+	Author = {James Rumbaugh},
+	Booktitle = {Conference proceedings on Object-oriented programming systems, languages and applications},
+	Date-Added = {2011-07-19 15:54:40 -0400},
+	Date-Modified = {2011-07-19 15:57:30 -0400},
+	Pages = {466-481},
+	Publisher = {ACM},
+	Series = {OOPSLA '87},
+	Title = {Relations as Semantic Constructs in an Object-Oriented Language},
+	Year = {1987}}
+
+@book{cardmath2010,
+	Author = {Matthias Beck and Ross Geoghegan},
+	Date-Added = {2011-07-19 15:45:05 -0400},
+	Date-Modified = {2011-07-19 15:46:48 -0400},
+	Publisher = {Springer},
+	Title = {The Art of Proof: Basic Training for Deeper Mathematics},
+	Year = {2010}}
 
 @inproceedings{continuity1990,
 	Author = {Jonathan Grudin},
